# Comfyui-DiffusersUtils

./: .gitignore  README.md  contact.md  generate_prior_tokens_isolated.py  glm image diffusers.json  longcat diffusers.json  nodes.py  pyproject.toml
.github/workflows/: publish.yml
glm_image/: pipeline_glm_image.py  pipeline_glm_image_img2img.py
longcat/: __init__.py  longcat_image_dit.py  pipeline_longcat_image_edit.py
old/: README_old.md  longcat-diffusers.json  nodes_old.py
old/longcat_old/: pipeline_longcat_image.py  pipeline_longcat_image_edit_new.py  pipeline_longcat_image_new.py  pipeline_output.py  transformer_longcat_image.py
