[project]
name = "diffusersutils"
description = ""
version = "1.0.5"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lrzjason/Comfyui-DiffusersUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lrzjason"
DisplayName = "Comfyui-DiffusersUtils"
Icon = ""
